Added artist/albums entities with relations